Fix grid layout issues

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ html {
     grid-row: 1 / 2;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
 }
 
 .profile-name {
@@ -93,6 +93,7 @@ html {
     display: flex;
     align-self: center;    
     gap: 20px;
+    justify-content: end;
 }
 
 .header-buttons button {
@@ -162,9 +163,15 @@ html {
     align-self: end;
 }
 
-.announcments-container {
+.right-side-content {
     grid-column: 2 / 3;
-    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-height: 100%;
+}
+
+.announcments-container {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -207,8 +214,6 @@ hr.solid {
 }
 
 .trending-container {
-    grid-column: 2 / 3;
-    grid-row: 2;
     display: flex;
     flex-direction: column;
     gap: 20px;
